# bike-rental-backend

./: .env.example  .flake8  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: deploy.yml  tests.yml
infra/: default.conf  docker-compose.prod.yml  docker-compose.yml
src/backend/app/: asgi.py  urls.py
src/backend/app/settings/: base.py  local.py  prod.py
src/backend/bikes/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/backend/bikes/migrations/: 0001_initial.py  0002_alter_bike_options_alter_bike_rental_cost_per_hour_and_more.py  0003_alter_bike_options.py
src/backend/fixtures/: fake_data.json
src/backend/rental/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/backend/rental/migrations/: 0001_initial.py  0002_alter_rental_options_alter_rental_status_and_more.py
src/backend/users/: serializers.py  urls.py  views.py
tests/: conftest.py
tests/bikes/: conftest.py  test_models.py  test_services.py  test_views.py
tests/rental/: conftest.py  test_models.py  test_services.py  test_views.py
tests/users/: test_urls.py  test_views.py
